--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "pages/detail/detail",
     "pages/login/login",
     "pages/index/index",
+    "pages/user/user",
     "pages/logs/logs"
   ],
   "window":{
@@ -21,9 +22,13 @@
     "borderStyle":"white",
     "list":[{
       "pagePath":"pages/topics/topics",
+      "iconPath": "image/icon_component.png",
+      "selectedIconPath": "image/icon_component_HL.png",
       "text":"首页"
     },{
-      "pagePath":"pages/logs/logs",
+      "pagePath":"pages/index/index",
+      "iconPath": "image/icon_API.png",
+      "selectedIconPath": "image/icon_API_HL.png",
       "text":"我的"
     }]
   }
