--- a/app.json
+++ b/app.json
@@ -5,6 +5,8 @@
     "pages/login/login",
     "pages/index/index",
     "pages/user/user",
+    "pages/create/create",
+    "pages/message/message",
     "pages/logs/logs"
   ],
   "window":{
@@ -20,11 +22,22 @@
     "selectedColor":"#80bd01",
     "backgroundColor":"#fff",
     "borderStyle":"white",
-    "list":[{
+    "list":[
+      {
       "pagePath":"pages/topics/topics",
       "iconPath": "image/icon_component.png",
       "selectedIconPath": "image/icon_component_HL.png",
       "text":"首页"
+    },{
+      "pagePath":"pages/create/create",
+      "iconPath": "image/icon_API.png",
+      "selectedIconPath": "image/icon_API_HL.png",
+      "text":"发表"
+    },{
+      "pagePath":"pages/logs/logs",
+      "iconPath": "image/icon_API.png",
+      "selectedIconPath": "image/icon_API_HL.png",
+      "text":"消息"
     },{
       "pagePath":"pages/index/index",
       "iconPath": "image/icon_API.png",
