--- a/app.json
+++ b/app.json
@@ -30,18 +30,18 @@
       "text":"首页"
     },{
       "pagePath":"pages/create/create",
-      "iconPath": "image/icon_API.png",
-      "selectedIconPath": "image/icon_API_HL.png",
+      "iconPath": "image/icon_component.png",
+      "selectedIconPath": "image/icon_component_HL.png",
       "text":"发表"
     },{
       "pagePath":"pages/logs/logs",
-      "iconPath": "image/icon_API.png",
-      "selectedIconPath": "image/icon_API_HL.png",
+      "iconPath": "image/icon_component.png",
+      "selectedIconPath": "image/icon_component_HL.png",
       "text":"消息"
     },{
       "pagePath":"pages/index/index",
-      "iconPath": "image/icon_API.png",
-      "selectedIconPath": "image/icon_API_HL.png",
+      "iconPath": "image/icon_component.png",
+      "selectedIconPath": "image/icon_component_HL.png",
       "text":"我的"
     }]
   }
